[project]
name = "fluency-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "FBEZ",email = "francesco.bez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "fluency_checker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
