[project]
name = "fluency-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "FBEZ",email = "francesco.bez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "fluency_checker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
mypy = "^1.19.0"
black = "^25.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
